--- a/public/home/assets/css/style.scss
+++ b/public/home/assets/css/style.scss
@@ -10,7 +10,7 @@ This files table contents are outlined below>>>>>
 
 *******************************************
 *******************************************
-** - Default Btn Style 
+** - Default Btn Style
 ** - Section Title Style
 ** - Navbar Area Style
 ** - Home Slider Area Style
@@ -87,7 +87,7 @@ body {
     color: $paragraph-color;
 }
 p {
-    color: $paragraph-color; 
+    color: $paragraph-color;
 }
 a {
     display: inline-block;
@@ -150,7 +150,7 @@ img {
     background-color: $section-bg-color !important;
 }
 /*================================
-Default Btn Style 
+Default Btn Style
 ===================================*/
 .default-btn {
     padding: 12px 27px;
@@ -176,7 +176,7 @@ Default Btn Style
         background-color: $regal-blue;
         z-index: -1;
         transition: all 0.5s;
-    }      
+    }
     &::after {
         content: "";
         position: absolute;
@@ -226,7 +226,7 @@ Default Btn Style
                 width: 50%;
             }
         }
-    } 
+    }
 }
 .default-bg-buttercup {
     background-color: $buttercup-color;
@@ -252,7 +252,7 @@ Default Btn Style
 Default Btn Style End
 ===================================*/
 /*================================
-Section Title Style 
+Section Title Style
 ===================================*/
 .section-title {
     span {
@@ -481,7 +481,7 @@ Navbar Area
                             transition: 0.7s;
                             font-weight: 400;
                             &.active{
-                                border-radius: .25rem; 
+                                border-radius: .25rem;
                                 color: $buttercup-color !important;
                             }
                             &:hover, :focus, .active{
@@ -1109,7 +1109,7 @@ Inner Banner
     background-image: url(../img/inner-banner/7.jpg);
 }
 .inner-bg8 {
-    background-image: url(../img/inner-banner/8.jpg);
+    // background-image: url(../img/inner-banner/8.jpg);
 }
 .inner-bg9 {
     background-image: url(../img/inner-banner/9.jpg);
@@ -1128,7 +1128,7 @@ Inner Banner End
 ====================================*/
 
 /*=================================
-Property Details 
+Property Details
 ====================================*/
 .property-details {
     padding: 50px 0;
@@ -1179,7 +1179,7 @@ Property Details
             }
         }
     }
-} 
+}
 /*=================================
 Property Details End
 ====================================*/
@@ -1223,7 +1223,7 @@ Service Area
                 color: $color-white;
             }
         }
-       
+
         p {
             color: $color-white;
         }
@@ -1278,7 +1278,7 @@ Service Area
         opacity: 1;
         width: 100%;
     }
-} 
+}
 .service-card-bg-two {
     position: relative;
     &::before {
@@ -1317,7 +1317,7 @@ Service Area
         .learn-more-btn i {
             color: $color-white;
         }
-    } 
+    }
 }
 .service-card-bg-three {
     position: relative;
@@ -1357,7 +1357,7 @@ Service Area
         .learn-more-btn i {
             color: $color-white;
         }
-    } 
+    }
 }
 
 .service-item {
@@ -1403,7 +1403,7 @@ Service Area End
 ====================================*/
 
 /*=================================
-Service Details Area 
+Service Details Area
 ====================================*/
 .service-details-area {
     .section-title {
@@ -1465,7 +1465,7 @@ Service Details Area
                     background-color: #ab842a;
                     border-radius: 50px;
                     position: absolute;
-                   
+
                 }
                 .pn-1 {
                     top: -40px;
@@ -1579,7 +1579,7 @@ Gallery Area End
 ====================================*/
 
 /*=================================
-Property Area 
+Property Area
 ====================================*/
 .property-img {
     margin-bottom: 30px;
@@ -1613,7 +1613,7 @@ Property Area
         }
         a {
             display: block;
-        } 
+        }
     }
     .property-btn {
         margin-top: 30px;
@@ -1629,12 +1629,12 @@ Property Area
             a h2 b {
                 color: $dark-blue !important;
             }
-        } 
+        }
     }
     .section-title-two {
         a {
             display: block;
-        } 
+        }
     }
 }
 .property-img-three {
@@ -1853,14 +1853,14 @@ Property Section End
             }
         }
     }
-    
+
 }
 /*=================================
 Property Section End
 ====================================*/
 
 /*=================================
-Project Area 
+Project Area
 ====================================*/
 .project-area {
     background-position: center center;
@@ -1940,7 +1940,7 @@ Project Area End
 ====================================*/
 
 /*=================================
-Development Area 
+Development Area
 ====================================*/
 .development-card {
     margin-bottom: 30px;
@@ -1969,7 +1969,7 @@ Development Area End
 ====================================*/
 
 /*=================================
-Development Section 
+Development Section
 ====================================*/
 .development-section {
     background-image: url(../img/project-details/shape.png);
@@ -2045,7 +2045,7 @@ Development Section End
 ====================================*/
 
 /*=================================
-Orgin Area 
+Orgin Area
 ====================================*/
 .orgin-title {
     text-align: center;
@@ -2102,7 +2102,7 @@ Orgin Area End
 ====================================*/
 
 /*=================================
-Room Details 
+Room Details
 ====================================*/
 .room-details-tab {
     margin-top: 30px;
@@ -2318,7 +2318,7 @@ Room Details
                     font-size: 25px;
                 }
             }
-            
+
             p {
                 font-size: 15px;
                 margin-bottom: 0;
@@ -2358,7 +2358,7 @@ Room Details End
 ====================================*/
 
 /*=================================
-Innovation Section 
+Innovation Section
 ====================================*/
 .innovation-content {
     .section-title {
@@ -2438,7 +2438,7 @@ Innovation Section
         color: $regal-blue;
     }
     p {
-        
+
         font-weight: 400;
         margin: 0 auto;
     }
@@ -2448,7 +2448,7 @@ Innovation Section End
 ====================================*/
 
 /*=================================
-Efficiency Card 
+Efficiency Card
 ====================================*/
 .efficiency-card {
     background-color: $color-white;
@@ -2491,7 +2491,7 @@ Efficiency Card
             max-width: 250px;
         }
     }
-   
+
     i {
         font-size: 85px;
         color: #f2f2f2;
@@ -2507,7 +2507,7 @@ Efficiency Card End
 ====================================*/
 
 /*==================================
-Product Are CSS 
+Product Are CSS
 ====================================*/
 .product-area {
     .section-title-two {
@@ -2551,7 +2551,7 @@ Product Are CSS
                 }
             }
         }
-       
+
         .default-btn {
             &.product-btn {
                 position: absolute;
@@ -2747,7 +2747,7 @@ Cart Wraps Area
             }
         }
     }
-      
+
     .cart-calc {
         margin-top: 50px;
         background-color: #ffffff;
@@ -2861,7 +2861,7 @@ Cart Wraps Area End
 ===================================*/
 
 /*=================================
-Checkout Area 
+Checkout Area
 ===================================*/
 .checkout-area {
     .checkout-user {
@@ -2904,7 +2904,7 @@ Checkout Area
             span {
                 color: $hot-toddy;
             }
-        } 
+        }
         .form-control {
             height: 50px;
             color: #2d3652;
@@ -2978,7 +2978,7 @@ Checkout Area
             color: $regal-blue;
             margin-left: 5px;
             font-weight: 500;
-        } 
+        }
     }
 }
 
@@ -3054,8 +3054,8 @@ Checkout Area
                                 color: $regal-blue;
                                 font-weight: 700;
                             }
-                        } 
-                        &.shipping-price {                         
+                        }
+                        &.shipping-price {
                             font-weight: 700;
                         }
                         &.order-subtotal-price {
@@ -3063,11 +3063,11 @@ Checkout Area
                         }
                         &.product-subtotal {
                             font-weight: 700;
-                        }                          
-                    } 
+                        }
+                    }
                 }
             }
-        }          
+        }
     }
     .payment-box {
         background-color: $color-white;
@@ -3112,7 +3112,7 @@ Checkout Area
                     opacity: 1;
                     visibility: visible;
                     transform: scale(1);
-                }                
+                }
             }
             p [type="radio"]:not(:checked) {
                 display: none;
@@ -3150,7 +3150,7 @@ Checkout Area
                     opacity: 0;
                     visibility: hidden;
                     transform: scale(0);
-                }     
+                }
             }
         }
         .order-btn {
@@ -3177,7 +3177,7 @@ Checkout Area
                 z-index: -1;
                 -webkit-transition: all 0.5s;
                 transition: all 0.5s;
-            }      
+            }
             &::after {
                 content: "";
                 position: absolute;
@@ -3216,7 +3216,7 @@ Checkout Area End
 ===================================*/
 
 /*==================================
-Shop Details 
+Shop Details
 ====================================*/
 .shop-detls-image {
     margin-bottom: 30px;
@@ -3260,7 +3260,7 @@ Shop Details
             &:hover {
                 color: $buttercup-color;
                 border-color: $buttercup-color;
-            }              
+            }
         }
     }
     p {
@@ -3360,19 +3360,19 @@ Shop Details
 .shop .input-count-area .input-counter input::-webkit-input-placeholder {
     color: $regal-blue;
 }
-  
+
 .shop .input-count-area .input-counter input:-ms-input-placeholder {
     color: $regal-blue;
 }
-  
+
 .shop .input-count-area .input-counter input::-ms-input-placeholder {
     color: $regal-blue;
 }
-  
+
 .shop .input-count-area .input-counter input::placeholder {
     color: $regal-blue;
 }
-  
+
 .tab {
     .tabs_item {
         display: none;
@@ -3427,7 +3427,7 @@ Shop Details
                     margin-bottom: 20px;
                     &:last-child {
                         margin-bottom: 0;
-                    }                      
+                    }
                 }
                 .additional-information {
                     padding-left: 0;
@@ -3460,7 +3460,7 @@ Shop Details
                         position: relative;
                         .rating {
                             display: inline-block;
-                            
+
                             i {
                                 color: $buttercup-color;
                                 font-size: 14px;
@@ -3470,7 +3470,7 @@ Shop Details
                                 display: inline-block;
                                 padding-left: 5px;
                                 line-height: initial;
-                            }                         
+                            }
                         }
                         .btn-right {
                             position: absolute;
@@ -3485,7 +3485,7 @@ Shop Details
                                 background-color: $buttercup-color;
                                 color: $color-white;
                             }
-                        }   
+                        }
                     }
                     .review-comments {
                         margin-top: 35px;
@@ -3514,7 +3514,7 @@ Shop Details
                                 font-weight: 500;
                                 strong {
                                     font-weight: 600;
-                                } 
+                                }
                             }
                             p {
                                 margin-bottom: 0;
@@ -3530,9 +3530,9 @@ Shop Details
                                 font-size: 15px;
                                 &:hover {
                                     color: $buttercup-color;
-                                }                                  
-                            }      
-                        }                          
+                                }
+                            }
+                        }
                     }
                     .review-form {
                         margin-top: 30px;
@@ -3549,15 +3549,15 @@ Shop Details
                                 background-color: #f4f4f4;
                             }
                         }
-                    }  
-                } 
+                    }
+                }
             }
         }
     }
 }
 /*==================================
 Shop Details End
-====================================*/ 
+====================================*/
 
 /*=================================
 Testimonial Area
@@ -3673,7 +3673,7 @@ Testimonial Area End
 ====================================*/
 
 /*=================================
-Forward Area 
+Forward Area
 ====================================*/
 .forward-area {
     position: relative;
@@ -3733,7 +3733,7 @@ Forward Area End
 ====================================*/
 
 /*=================================
-About Area 
+About Area
 ====================================*/
 .about-content {
     .section-title-two {
@@ -3857,7 +3857,7 @@ Team Area End
 ====================================*/
 
 /*=================================
-Apartment Area 
+Apartment Area
 ====================================*/
 .apartment-btn {
     margin-top: 70px;
@@ -3893,7 +3893,7 @@ Apartment Area
             &:hover{
                 border: 5px solid #f0f0f0;
                 padding: 10px;
-            } 
+            }
         }
     }
 }
@@ -3958,7 +3958,7 @@ Apartment Area
             transition: 0.7s;
         }
     }
-    
+
     p {
         margin-bottom: 0;
     }
@@ -4011,7 +4011,7 @@ Counter Area
             color: #8390b0;
             margin-bottom: 10px;
             line-height: 1;
-            
+
         }
         span {
             color: $color-white;
@@ -4029,7 +4029,7 @@ Counter Area End
 ====================================*/
 
 /*=================================
-Apartment Offer 
+Apartment Offer
 ====================================*/
 .apartment-offer-two {
     position: relative;
@@ -4105,7 +4105,7 @@ Apartment Offer
         &::before {
             opacity: 1;
             width: 100%;
-            
+
         }
         i {
             color: #ffc1c1;
@@ -4116,7 +4116,7 @@ Apartment Offer
         &::before {
             opacity: 1;
             width: 100%;
-            
+
         }
         h3 {
             color: $color-white;
@@ -4243,7 +4243,7 @@ House Details Area
         margin-top: 20px;
         margin-bottom: 40px;
         list-style: none;
-        padding: 0; 
+        padding: 0;
         max-width: 460px;
         li {
             font-size: 17px;
@@ -4267,10 +4267,10 @@ House Details Area
 }
 .margin-left {
     margin-left: auto;
-} 
+}
 .house-margin {
     margin-left: 100px;
-} 
+}
 .house-slider {
     position: relative;
     .owl-nav {
@@ -4381,7 +4381,7 @@ House Details Area
         margin-top: 20px;
         margin-bottom: 40px;
         list-style: none;
-        padding: 0; 
+        padding: 0;
         max-width: 460px;
         li {
             font-size: 17px;
@@ -4525,7 +4525,7 @@ House Area End
 ====================================*/
 
 /*=================================
-Blog Area 
+Blog Area
 ====================================*/
 .blog-area {
     padding-top: 100px;
@@ -4741,7 +4741,7 @@ Blog Details Area
                     transition: 0.7s;
                     color: $hot-toddy;
                     a {
-                        color: $hot-toddy;  
+                        color: $hot-toddy;
                     }
                     &:hover a{
                         color: $dark-blue;
@@ -4980,7 +4980,7 @@ Blog Details Area
                 i {
                     color: #f6f2e7;
                   }
-                  
+
                 &:hover {
                     background-color: $regal-blue;
                 }
@@ -5046,7 +5046,7 @@ Blog Details Area End
 ====================================*/
 
 /*=================================
-newsletter Area 
+newsletter Area
 ====================================*/
 .newsletter-area {
     background-color: $section-bg-color;
@@ -5106,7 +5106,7 @@ newsletter Area
         line-height: 55px;
         padding: 0 30px;
         height: 55px;
-        border: 0;             
+        border: 0;
     }
     .validation-danger {
         font-size: 18px;
@@ -5119,7 +5119,7 @@ newsletter Area End
 ====================================*/
 
 /*=================================
-Map Area 
+Map Area
 ====================================*/
 .map-area {
     position: relative;
@@ -5545,7 +5545,7 @@ Page-navigation Area Style
             position: relative;
             font-size: 30px;
             top: 5px;
-            
+
         }
         &.current {
             color: $hot-toddy;
@@ -5575,7 +5575,7 @@ Faq Area Style End
 ====================================*/
 
 /*=================================
-Contact Area 
+Contact Area
 ====================================*/
 .contact-area {
     background-image: url(../img/contact-bg.jpg);
@@ -5670,7 +5670,7 @@ Contact Area End
 ====================================*/
 
 /*==============================
-User All CSS 
+User All CSS
 =================================*/
 .user-all-content {
     margin-bottom: 30px;
@@ -5796,7 +5796,7 @@ User All CSS
     }
 }
 /*==============================
-User All CSS 
+User All CSS
 =================================*/
 
 /*=================================
@@ -5853,8 +5853,8 @@ User All CSS
 404 Error Area End
 ===================================*/
 
-/*================================== 
-Coming Soon Area 
+/*==================================
+Coming Soon Area
 ====================================*/
 .coming-soon-area {
     position: relative;
@@ -5919,7 +5919,7 @@ Coming Soon Area
                     margin-right: 0;
                     &::before {
                         display: none;
-                    }  
+                    }
                 }
                 &:first-child {
                     margin-left: 0;
@@ -6015,7 +6015,7 @@ Coming Soon Area
         color: #dc3545 !important;
     }
 }
-/*================================== 
+/*==================================
 Coming Soon Area End
 ====================================*/
 .single-content {
@@ -6065,7 +6065,7 @@ Preloader CSS End
 =================================*/
 
 /*==================================
-Back To Top Button 
+Back To Top Button
 =====================================*/
 #toTop {
 	position: fixed;
@@ -6074,7 +6074,7 @@ Back To Top Button
 	cursor: pointer;
     display: none;
     z-index: 99;
-} 
+}
 .top-btn {
     background-color: $buttercup-color;
     color: $color-white;
@@ -6094,11 +6094,11 @@ Back To Top Button
     }
 }
 /*==============================
-Back To Top Button 
+Back To Top Button
 =================================*/
 
 /*==============================
-Animation  CSS 
+Animation  CSS
 =================================*/
 @-webkit-keyframes circle-in {
     0%, 80%, 100% {
